kubernetes/mariadb/fineractmysql-deployment.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: fineract-server
  name: fineractmysql
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: fineract-server
    tier: fineractmysql
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fineract-server
  name: fineractmysql
spec:
  selector:
    matchLabels:
      app: fineract-server
      tier: fineractmysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fineract-server
        tier: fineractmysql
    spec:
      containers:
        - image: mariadb:11.0
          name: mysql
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "5Gi"
              cpu: "2000m"
          ports:
            - containerPort: 3306
              name: fineractmysql
          volumeMounts:
            - name: fineractmysql-initdb
              mountPath: /docker-entrypoint-initdb.d/
            #- name: fineractmysql-persistent-storage
            #  mountPath: /var/lib/mysql/
      volumes:
        - name: fineractmysql-initdb
          configMap:
            name: fineractmysql-initdb
        - name: fineractmysql-persistent-storage
          persistentVolumeClaim:
            claimName: fineractmysql-pv-claim
